unpackaged/main/default/objects/bt_base__Rule__c/bt_base__Rule__c.object-meta.xml
<CustomObject>
    <description>Parent of rule conditions records. Rules dictate the website visitor’s visibility of and access to events, event items, sessions, products, and more.</description>
    <label>BT Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>