unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Active__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Rule will not be evaluated when it is not active.</description>
    <inlineHelpText>Only active rules can be added to other records. Inactive rules will not be evaluated by Blackthorn automation.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>