unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>