unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Custom_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Custom_Filter_Logic__c</fullName>
    <label>Custom Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>