unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Description__c</fullName>
    <inlineHelpText>Help users understand the intent and context of the rule.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>