unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Extend_Contact_Visibility_To_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Extend_Contact_Visibility_To_Account__c</fullName>
    <description>Deprecated</description>
    <inlineHelpText>Select “Yes” to extend visibility from one contact who meets the rule criteria to all contacts within the account. When a contact meets criteria, all contacts in the account gain access.</inlineHelpText>
    <label>Extend Contact Visibility(Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>