unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Extend_Eligibility_To_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Extend_Eligibility_To_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact is eligible to register for the item based on eligibility within the bucket account of this contact. If one of the contacts is evaluated as eligible, all contacts within the account evaluate as eligible.</description>
    <inlineHelpText>Enable this checkbox to calculate eligibility based on contacts associated with the same account. When enabled, all contacts in the same account are eligible to register to an item if one of the contact’s in the account is eligible.</inlineHelpText>
    <label>Extend Eligibility to Account</label>
    <type>Checkbox</type>
</CustomField>