unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Last_Update_Date__c</fullName>
    <description>The date/time this record was last updated.</description>
    <inlineHelpText>The date/time this record was last updated.</inlineHelpText>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>