unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Process__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, the record will be processed using the Advanced Visibility logic. The box will be automatically unchecked after being &#39;checked&#39;.</description>
    <inlineHelpText>When this box is checked, the record will be processed using the Advanced Visibility logic. The box will be automatically unchecked after being &#39;checked&#39;.</inlineHelpText>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>