unpackaged/main/default/objects/bt_base__Rule__c/fields/bt_base__Visibility_Options__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Visibility_Options__c</fullName>
    <label>Visibility Options(Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Visible</fullName>
                <default>true</default>
                <label>Not Visible</label>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>